fix: Cover missaligned in iOS

--- a/src/components/Extra/styles.module.scss
+++ b/src/components/Extra/styles.module.scss
@@ -31,7 +31,7 @@
   gap: 2rem;
   grid-template: 1fr / 100%;
   grid-auto-flow: row;
-  justify-items: end;
+  justify-items: flex-end;
   left: 50%;
   padding: 3rem;
   position: absolute;
